--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ jobs:
   job1:
     runs-on: ubuntu-latest
     steps:
-    - uses: action/setup-java@v1
+    - uses: actions/setup-java@v1
       with:
         java-version: '1.8.0'
     - run: java -version
