--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,12 @@
 on: push
 jobs:
   job1:
+    name: 查看java版本工作
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/setup-java@v1
+    - name: 设置java及版本
+      uses: actions/setup-java@v1
       with:
         java-version: '1.8.0'
-    - run: java -version
+    - name: 查看java版本
+      run: java -version
