--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,4 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         push: true
-        tags: housihai/testWeb:latest
+        tags: housihai/myspringboot:v0.0.1
