--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
+    - name: Build with Maven
+      run: mvn -U clean install -Dmaven.test.skip=true --file pom.xml
     - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
