--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,8 +8,12 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
     - name: Build with Maven
-      run: mvn -U clean install -Dmaven.test.skip=true --file pom.xml
+      run: mvn -B package --file pom.xml
     - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
