--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,4 +23,4 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         push: true
-        tags: housihai/myspringboot:v0.0.1
+        tags: housihai/myspringboot:0.0.1
