--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,8 @@ jobs:
         java-version: 1.8
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: 查看目录
+      run: ls
     - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
