--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: 查看目录
-      run: ls
+      run: cd target && ls
     - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
