--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,21 +6,23 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
+    - name: 拉取代码
       uses: actions/checkout@v2
-    - name: Set up JDK 1.8
+      
+    - name: 设置jdk1.8.0
       uses: actions/setup-java@v1
       with:
-        java-version: 1.8
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
-    - name: 查看目录
-      run: cd target && ls
-    - name: Login to Docker Hub
+        java-version: 1.8.0
+        
+    - name: maven编辑打包跳过测试
+      run: mvn package -DskipTests
+      
+    - name: 登录DockerHub
       uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
+        
     - name: Build and push Docker image
       uses: docker/build-push-action@v2
       with:
