--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,9 @@ jobs:
     - name: maven编辑打包跳过测试
       run: mvn package -DskipTests
       
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+  
     - name: 登录DockerHub
       uses: docker/login-action@v1
       with:
@@ -26,5 +29,7 @@ jobs:
     - name: Build and push Docker image
       uses: docker/build-push-action@v2
       with:
+        context: .
+        file: ./Dockerfile
         push: true
         tags: housihai/myspringboot:0.0.1
