--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,13 +14,13 @@ jobs:
       with:
         java-version: 1.8.0
         
-    - name: maven编辑打包跳过测试
+    - name: Maven编辑打包跳过测试
       run: mvn package -DskipTests
       
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+    #- name: Set up Docker Buildx
+    #  uses: docker/setup-buildx-action@v1
   
-    - name: 登录DockerHub
+    - name: Login in docker hub
       uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
