--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,9 +16,6 @@ jobs:
         
     - name: Maven编辑打包跳过测试
       run: mvn package -DskipTests
-      
-    #- name: Set up Docker Buildx
-    #  uses: docker/setup-buildx-action@v1
   
     - name: Login in docker hub
       uses: docker/login-action@v1
@@ -32,4 +29,4 @@ jobs:
         context: .
         file: ./Dockerfile
         push: true
-        tags: housihai/myspringboot:0.0.1
+        tags: housihai/testAction:0.0.1
